--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,20 +1,20 @@
 {
-  "short_name": "GOD",
-  "name": "Gary O'Donnell Official website",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
-      "src": "",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "n"
+      "type": "image/x-icon"
     },
     {
-      "src": "",
-      "type": "",
+      "src": "logo192.png",
+      "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "",
-      "type": "",
+      "src": "logo512.png",
+      "type": "image/png",
       "sizes": "512x512"
     }
   ],
