--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "react-image-gallery": "^1.4.0",
     "react-router-dom": "^6.24.0",
