--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "@strapi/provider-upload-cloudinary": "^5.11.0",
     "@strapi/strapi": "5.5.1",
     "better-sqlite3": "11.3.0",
+    "node-fetch": "^2.7.0",
+    "nodemailer": "^7.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
